<resources>
    <string name="app_name">SafeDrive</string>

    <string name="user_activity">All my activity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_history">User history</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_another_loggedIn">Another user is already logged in</string>
    <string name="error_no_loggedIn">Please login in order to continue</string>
    <string name="permission_rationale">"Location Settings is needed in order
        to track trips."</string>

    <!--- Strings related to active drive -->

    <string name="active_drive_details">Active Drive Details</string>
    <string name="trip_id">Trip ID : </string>
    <string name="session_id">Session ID : </string>
    <string name="trip_start_time">Trip Started at (Local Time) : </string>
    <string name="trip_distance">Distance in this trip : </string>
    <string name="current_speed">Current Speed : </string>
    <string name="auto_tracking">Is Auto Tracked event : </string>
    <string name="no_active_trip_session">No Current Active Trip/Session : </string>
    <string name="active_trip_map">Map my trip</string>
    <string name="active_trip_end">End my trip</string>
    <string name="active_trip_start">Start my trip</string>
    <string name="active_session_end">End my session</string>
    <string name="active_session_start">Start the session</string>
    <string name="drive_started">Drive has Started</string>
    <string name="maps_not_implemented">Not implemented - Will open Maps Activity with LocationPoints from driveInfo</string>
    <!--- Strings related to future time -->
    <string name="set_future_time">Setup trip for selected time</string>
    <string name="title_activity_decision">DecisionActivity</string>
    <string name="notification_content">Time to start a trip</string>

    <!--- Strings related to history -->
    <string name="string_tripid">Trip ID : </string>
    <string name="string_start_date">Start date and time : </string>
    <string name="string_end_date">End date and time : </string>
    <string name="string_average_speed">Average Speed : </string>
    <string name="string_max_speed">Max Speed : </string>
    <string name="string_distance">Distance Covered: </string>
    <string name="string_driveScore">Drive Score : </string>
    <string name="string_driveNoHistory">No trips recorded yet</string>
</resources>
